# MinionsCode

./: .gitignore  README.md  install.sh
Resources/: AppIcon.icns
Sources/MinionsCode/: App.swift  AppDelegate.swift  AppSettings.swift  ContentView.swift  FileExplorer.swift  GitPanel.swift  NotificationManager.swift  SessionManager.swift  TerminalSession.swift  TerminalViewRepresentable.swift
rust-tui/: Cargo.toml  README.md  install.sh
rust-tui/src/: ai.rs  app.rs  main.rs  models.rs  notifications.rs  scanner.rs  ui.rs  watcher.rs
scripts/: generate_icon.swift
