[package]
name = "minionscode"
version = "0.1.0"
edition = "2021"
description = "TUI dashboard for Claude Code sessions"

[[bin]]
name = "minionscode"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
walkdir = "2"
notify = "6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
